--- a/package.json
+++ b/package.json
@@ -29,7 +29,22 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "keyword-spacing": "warn",
+      "eqeqeq": "off",
+      "comma-spacing": "warn",
+      "no-multiple-empty-lines": "off",
+      "comma-dangle": "off",
+      "no-debugger": "off",
+      "no-console": "off",
+      "no-multi-str": "warn",
+      "no-new": "off",
+      "padded-blocks": "off",
+      "template-curly-spacing": "off",
+      "yoda": "off",
+      "semi": "off",
+      "space-before-function-paren": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
